[tool.poetry]
name = "repl_python3_selenium-youtube-scraper-live"
version = "0.1.0"
description = ""
authors = ["aakashns <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
selenium = "^4.1.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
